fix bug bg video on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -128,8 +128,12 @@
 }
 
 video {
-  height: 100vh;
-  width: 100vw;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    object-fit: cover;
+    height: 100vh;
+    width: 100vw;
 }
 
 /* GAME SCREEN SECTION */
